--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ pom.xml
 /lib/
 /classes/
 .lein-deps-sum
+pom.xml.asc
+/target/
+/checkouts/
+.lein-repl-history
+.lein-plugins/
+.lein-failures
+.nrepl-port
